[gd_scene load_steps=11 format=3 uid="uid://dr80skw7ns3ak"]

[ext_resource type="Script" path="res://level/ui/level_ui.gd" id="1_3muol"]
[ext_resource type="Texture2D" uid="uid://b1eqxypeue8iv" path="res://collectibles/fuel/fuel.png" id="2_wv2ak"]
[ext_resource type="PackedScene" uid="uid://2sumqd6vi3hb" path="res://level/ui/pedal/pedal.tscn" id="3_anrv5"]
[ext_resource type="PackedScene" uid="uid://dq28o5gtmi66b" path="res://level/ui/fuel_bar/fuel_bar.tscn" id="3_pna6q"]
[ext_resource type="PackedScene" uid="uid://i2yymnxjws64" path="res://global/ui/currency/currency_display_coins.tscn" id="4_s7owg"]
[ext_resource type="PackedScene" uid="uid://bcwuvhyl3kdtp" path="res://global/ui/currency/currency_display_gems.tscn" id="5_entv7"]
[ext_resource type="PackedScene" uid="uid://cahox3uu8r2gb" path="res://level/ui/gauge/gauge.tscn" id="5_fl8er"]
[ext_resource type="PackedScene" uid="uid://c28b4tgfroa80" path="res://level/ui/low_fuel_alarm/low_fuel_alarm.tscn" id="6_75jpt"]
[ext_resource type="Texture2D" uid="uid://caobgj8ei6ev8" path="res://global/art/trophy.png" id="9_bmjdt"]
[ext_resource type="Texture2D" uid="uid://c68fig6p2ongj" path="res://level/ui/pause.png" id="10_gb3my"]

[node name="LevelUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_3muol")

[node name="LabelDistance" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -176.0
offset_top = 16.0
offset_right = 176.0
offset_bottom = 103.0
grow_horizontal = 2
theme_type_variation = &"Label_L"
text = "0 m"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 32.0
offset_top = 32.0
offset_right = 384.0
offset_bottom = 96.0
theme_override_constants/separation = 16

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("2_wv2ak")
expand_mode = 2

[node name="FuelBar" parent="VBoxContainer/HBoxContainer" instance=ExtResource("3_pna6q")]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="CurrencyDisplayCoins" parent="VBoxContainer" instance=ExtResource("4_s7owg")]
layout_mode = 2

[node name="CurrencyDisplayGems" parent="VBoxContainer" instance=ExtResource("5_entv7")]
layout_mode = 2

[node name="PedalL" parent="." instance=ExtResource("3_anrv5")]
layout_mode = 1

[node name="PedalR" parent="." instance=ExtResource("3_anrv5")]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_right = 1.0
offset_left = -384.0
offset_right = 0.0
grow_horizontal = 0

[node name="GaugeSpeed" parent="." instance=ExtResource("5_fl8er")]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 400.0
offset_top = -320.0
offset_right = 720.0
offset_bottom = 0.0
grow_vertical = 0

[node name="LowFuelAlarm" parent="." instance=ExtResource("6_75jpt")]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1037.0
offset_top = -240.0
offset_right = -317.0
grow_horizontal = 0
grow_vertical = 0

[node name="HBoxContainerHighscore" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -192.0
offset_top = 16.0
offset_right = -160.0
offset_bottom = 87.0
grow_horizontal = 0
theme_override_constants/separation = 16

[node name="TextureRect" type="TextureRect" parent="HBoxContainerHighscore"]
layout_mode = 2
texture = ExtResource("9_bmjdt")
expand_mode = 2

[node name="LabelHighscore" type="Label" parent="HBoxContainerHighscore"]
layout_mode = 2
theme_type_variation = &"Label_L"
text = "0m"
horizontal_alignment = 2

[node name="ButtonPause" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -90.0
offset_bottom = 93.0
grow_horizontal = 0
theme_type_variation = &"ButtonFlat"
icon = ExtResource("10_gb3my")
icon_alignment = 1

[connection signal="pressed" from="ButtonPause" to="." method="_on_button_pause_pressed"]
